--- a/demos/SimpleWindowDemo/SimpleWindowDemo.csproj
+++ b/demos/SimpleWindowDemo/SimpleWindowDemo.csproj
@@ -1,12 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\source\LibUISharp\LibUISharp.csproj" />
   </ItemGroup>
-
 </Project>
