--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,9 +16,9 @@ dotnet_csproj:
 nuget:
   project_feed: true
 before_build:
-- cmd: dotnet restore LibUISharp.sln
+- cmd: dotnet restore source\LibUISharp\LibUISharp.csproj
 build:
-  project: LibUISharp.sln
+  project: source\LibUISharp\LibUISharp.csproj
   publish_nuget: true
   publish_nuget_symbols: true
   include_nuget_references: true
