--- a/source/LibUISharp/LibUISharp.csproj
+++ b/source/LibUISharp/LibUISharp.csproj
@@ -55,8 +55,10 @@
     <Compile Include="src\.LibUISharp\Application.cs" />
     <Compile Include="src\.LibUISharp\Button.cs" />
     <Compile Include="src\.LibUISharp\CheckBox.cs" />
+    <Compile Include="src\.LibUISharp\ComboBox.cs" />
     <Compile Include="src\.LibUISharp\ContainerControl.cs" />
     <Compile Include="src\.LibUISharp\Control.cs" />
+    <Compile Include="src\.LibUISharp\EditableComboBox.cs" />
     <Compile Include="src\.LibUISharp\GroupBox.cs" />
     <Compile Include="src\.LibUISharp\Internal\ObjectExtensions.cs" />
     <Compile Include="src\.LibUISharp\Internal\Libraries.cs" />
@@ -66,6 +68,10 @@
     <Compile Include="src\.LibUISharp\Internal\PlatformHelper.cs" />
     <Compile Include="src\.LibUISharp\Internal\LibuiTypeAttribute.cs" />
     <Compile Include="src\.LibUISharp\Label.cs" />
+    <Compile Include="src\.LibUISharp\ProgressBar.cs" />
+    <Compile Include="src\.LibUISharp\Separator.cs" />
+    <Compile Include="src\.LibUISharp\Slider.cs" />
+    <Compile Include="src\.LibUISharp\SpinBox.cs" />
     <Compile Include="src\.LibUISharp\StackContainer.cs" />
     <Compile Include="src\.LibUISharp\TabContainer.cs" />
     <Compile Include="src\.LibUISharp\TextBox.cs" />
