--- a/source/LibUISharp/LibUISharp.csproj
+++ b/source/LibUISharp/LibUISharp.csproj
@@ -1,29 +1,13 @@
 ﻿<!--| Project:  LibUISharp.csproj                  |
     | Assembly: LibUISharp.dll                     |
     | Guid: {F11F9B51-1A65-4D95-AAF2-5C1F61BE77BD} |-->
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+  <Import Project="..\..\LibUISharp.props" />
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
-    <EnableDefaultItems>false</EnableDefaultItems>
-    <RootNamespace>$(MSBuildProjectName)</RootNamespace>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <NeutralLanguage>en-US</NeutralLanguage>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
-    <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
-    <Optimize>false</Optimize>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <Optimize>true</Optimize>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>embedded</DebugType>
-    <DefineConstants>TRACE</DefineConstants>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
@@ -60,20 +44,4 @@
   <ItemGroup>
     <PackageReference Include="NativeLibraryLoader" Version="1.0.8" />
   </ItemGroup>
-  <PropertyGroup>
-    <AssemblyName>$(MSBuildProjectName)</AssemblyName>
-    <AssemblyTitle>$(MSBuildProjectName)</AssemblyTitle>
-    <Authors>Thomas Corwin, et al.</Authors>
-    <Copyright>2018 (c) Thomas Corwin</Copyright>
-    <Version>0.4.0-alpha</Version>
-    <PackageId>$(MSBuildProjectName)</PackageId>
-    <Description>C# bindings for https://github.com/andlabs/libui targeting .NET Standard.</Description>
-    <PackageTags>libui;netstandard20;ui;drawing;desktop;cross-platform</PackageTags>
-    <PackageReleaseNotes>Version $(Version)</PackageReleaseNotes>
-    <PackageProjectUrl>https://github.com/tom-corwin/LibUISharp</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/tom-corwin/LibUISharp/blob/master/LICENSE.md</PackageLicenseUrl>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/tom-corwin/LibUISharp</RepositoryUrl>
-  </PropertyGroup>
 </Project>
