More confusing folder naming. This is temporary, I promise.
Plus more things finished.

--- a/source/LibUISharp/LibUISharp.csproj
+++ b/source/LibUISharp/LibUISharp.csproj
@@ -11,18 +11,16 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="NativeLibraryLoader" Version="1.0.8" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="src\*.cs" />
     <Compile Include="src\LibUISharp\*.cs" />
     <Compile Include="src\LibUISharp\Drawing\*.cs" />
     <Compile Include="src\LibUISharp\Internal\*.cs" />
   </ItemGroup>
   <ItemGroup>
-    <!-- These files are ones that need finished before this PR is merged. -->
-    <None Include="src\.LibUISharp\*.cs" />
-    <None Include="src\.LibUISharp\Drawing\*.cs" />
-    <None Include="src\.LibUISharp\Internal\*.cs" />
-    <None Include="src\.LibUISharp\Internal\NM\*.cs" />
-    <None Include="src\.LibUISharp\Internal\NM\Libui\*.cs" />
+    <None Include="ref\*.h" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="lib\WinNT\libui.dll">
@@ -41,7 +39,15 @@
       <Pack>true</Pack>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="NativeLibraryLoader" Version="1.0.8" />
+  <ItemGroup> <!-- These files are ones that need finished before this PR is merged. -->
+    <None Include="src\.LibUISharp\*.cs" />
+    <None Include="src\.LibUISharp\Drawing\*.cs" />
+    <None Include="src\.LibUISharp\Internal\*.cs" />
+    <None Include="src\.LibUISharp\Internal\NM\*.cs" />
+    <None Include="src\.LibUISharp\Internal\NM\Libui\*.cs" />
+    <Compile Include="src\_LibUISharp\*.cs" />
+    <Compile Include="src\_LibUISharp\Drawing\*.cs" />
+    <Compile Include="src\_LibUISharp\Internal\*.cs" />
+    <Compile Include="src\_LibUISharp\SafeHandles\*.cs" />
   </ItemGroup>
 </Project>
