Updated the solution file, fixed projects, fixed typos and dep issues

--- a/sources/LibUISharp.Native.Libui/LibUISharp.Native.Libui.csproj
+++ b/sources/LibUISharp.Native.Libui/LibUISharp.Native.Libui.csproj
@@ -32,4 +32,7 @@
 			<Pack>true</Pack>
 		</Content>
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\LibUISharp.Core\LibUISharp.Core.csproj" />
+	</ItemGroup>
 </Project>
