--- a/sources/LibUISharp.Core/LibUISharp.Core.csproj
+++ b/sources/LibUISharp.Core/LibUISharp.Core.csproj
@@ -8,4 +8,7 @@
 		<DefineConstants>$(DefineConstants);LIBUISHARP_CORE</DefineConstants>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="6.0.0" />
+	</ItemGroup>
 </Project>
