More work prepping for the native call code generator

--- a/sources/LibUISharp.CodeAnalysis.NativeCallGenerator/LibUISharp.CodeAnalysis.NativeCallGenerator.csproj
+++ b/sources/LibUISharp.CodeAnalysis.NativeCallGenerator/LibUISharp.CodeAnalysis.NativeCallGenerator.csproj
@@ -11,4 +11,7 @@
 	<ItemGroup>
 		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\LibUISharp.Core\LibUISharp.Core.csproj"/>
+	</ItemGroup>
 </Project>
