--- a/sources/LibUISharp.Native.Libui/LibUISharp.Native.Libui.csproj
+++ b/sources/LibUISharp.Native.Libui/LibUISharp.Native.Libui.csproj
@@ -14,13 +14,11 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
 		</Content>
-		<!--
-		<Content Include="lib\freebsd-x64\libui.so.2">
+		<Content Include="lib\linux-x64\libui.so">
 			<PackagePath>runtimes\freebsd-x64\libui.so</PackagePath>
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
 		</Content>
-		-->
 		<Content Include="lib\osx-x64\libui.dylib">
 			<PackagePath>runtimes\osx-x64\libui.dylib</PackagePath>
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -33,6 +31,9 @@
 		</Content>
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\LibUISharp.Core\LibUISharp.Core.csproj" />
+		<ProjectReference Include="..\LibUISharp.Core\LibUISharp.Core.csproj" />
+		<ProjectReference Include="..\LibUISharp.CodeAnalysis.NativeCallGenerator\LibUISharp.CodeAnalysis.NativeCallGenerator.csproj"
+						  OutputItemType="Analyzer"
+						  ReferenceOutputAssembly="false" />
 	</ItemGroup>
 </Project>
