--- a/sources/LibUISharp.Native.Libui/LibUISharp.Native.Libui.csproj
+++ b/sources/LibUISharp.Native.Libui/LibUISharp.Native.Libui.csproj
@@ -1,4 +1,4 @@
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+﻿<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 * FileName:             LibUISharp.Native.Libui.csproj
 * Copyright/License:    https://github.com/tom-corwin/libuisharp/blob/master/LICENSE.md
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -31,9 +31,10 @@
 		</Content>
 	</ItemGroup>
 	<ItemGroup>
+	  <Compile Remove="src\LibUISharp\Native\Libui\**" />
+	</ItemGroup>
+	<ItemGroup>
 		<ProjectReference Include="..\LibUISharp.Core\LibUISharp.Core.csproj" />
-		<ProjectReference Include="..\LibUISharp.CodeAnalysis.NativeCallGenerator\LibUISharp.CodeAnalysis.NativeCallGenerator.csproj"
-						  OutputItemType="Analyzer"
-						  ReferenceOutputAssembly="false" />
+		<ProjectReference Include="..\LibUISharp.CodeAnalysis.NativeCallGenerator\LibUISharp.CodeAnalysis.NativeCallGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 </Project>
