Fixed the examples to where they will build.

--- a/examples/Directory.Build.props
+++ b/examples/Directory.Build.props
@@ -9,7 +9,7 @@
     <LibUISharpProjectCategory>examples</LibUISharpProjectCategory>
   </PropertyGroup>
   
-  <Import Project="$([MSBuild]::GetPathOfFileAbove('global.props', '$(MSBuildThisFileDirectory)../'))" />
+  <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
