--- a/examples/LibUISharp.Demos.SimpleWindow/SimpleWindowExample.csproj
+++ b/examples/LibUISharp.Demos.SimpleWindow/SimpleWindowExample.csproj
@@ -6,6 +6,6 @@
 <Project Sdk="Microsoft.NET.Sdk" ToolsVersion="16.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<ItemGroup>
 		<ProjectReference Include="../../sources/LibUISharp.Core/LibUISharp.Core.csproj" />
-		<ProjectReference Include="../../sources/LibUISharp.Core/LibUISharp.UI.csproj" />
+		<ProjectReference Include="../../sources/LibUISharp.UI/LibUISharp.UI.csproj" />
 	</ItemGroup>
 </Project>
