--- a/examples/PlatformExample/PlarformExample.csproj
+++ b/examples/PlatformExample/PlarformExample.csproj
@@ -4,6 +4,9 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
 <Project Sdk="Microsoft.NET.Sdk" ToolsVersion="16.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="../../sources/LibUISharp.Core/LibUISharp.Core.csproj" />
 	</ItemGroup>
