--- a/.azp/jobs/libuisharp-publish.yml
+++ b/.azp/jobs/libuisharp-publish.yml
@@ -29,7 +29,7 @@ jobs:
   workspace:
     clean: all
   steps:
-  - template: ../steps/dotnet-install.yml
+  - template: ../steps/install-dotnet-sdk.yml
   - template: ../steps/dotnet-build.yml
     parameters:
       projectName: '${{ parameters.projectName }}'
