--- a/.azp/jobs/libuisharp-publish.yml
+++ b/.azp/jobs/libuisharp-publish.yml
@@ -22,8 +22,8 @@ parameters:
   #- 'tests'
 
 jobs:
-- job: '${{ parameters.name }}_Publish'
-  displayName: '${{ parameters.displayName }} (Publish)'
+- job: '${{ parameters.name }}'
+  displayName: '${{ parameters.displayName }}'
   pool:
     vmImage: 'windows-latest'
   workspace:
@@ -40,8 +40,6 @@ jobs:
       projectName: '${{ parameters.projectName }}'
       projectType: '${{ parameters.projectType }}'
       ${{ if eq(contains(variables['Build.SourceBranchName'], 'release/v'), true) }}:
-        releaseType: 'stable'
-      ${{ if eq(contains(variables['Build.SourceBranchName'], 'release/preview/v'), true) }}:
-        releaseType: 'preview'
-      ${{ if eq(contains(variables['Build.SourceBranchName'], 'release/'), false) }}:
+        releaseType: 'release'
+      ${{ if eq(contains(variables['Build.SourceBranchName'], 'release/v'), false) }}:
         releaseType: 'build'
