--- a/.azp.yml
+++ b/.azp.yml
@@ -1,10 +1,14 @@
 ########################################################################################################################
-# FileName:             azp.yml
-# Copyright/License:    https://github.com/tom-corwin/libuisharp/blob/master/LICENSE.md
+# FileName:             pipeline.yml
+# Copyright/License:    https://github.com/simplexidev/sdfx/blob/main/LICENSE.md
 ########################################################################################################################
 
-name: $(Date:yyMMdd)$(Rev:.rr)
+# Build Number
+################################################################################
+name: $(Date:yyMMdd)$(Rev:rr)
 
+# Commit Triggers
+################################################################################
 trigger:
   batch: false
   branches:
@@ -19,7 +23,11 @@ trigger:
     - ".gitattributes"
     - ".editorconfig"
     - ".github/*"
+    - "external/*"
+    - "*.sln"
 
+# Pull Request Triggers
+################################################################################
 pr:
   autoCancel: true
   branches:
@@ -28,7 +36,6 @@ pr:
     - enhancement/*
     - feature/*
     - hotfix/*
-    - internal/*
   paths:
     exclude:
     - "*.md"
@@ -36,83 +43,92 @@ pr:
     - ".gitattributes"
     - ".editorconfig"
     - ".github/*"
+    - "external/*"
+    - "*.sln"
+    
+# Pipeline Variables
+################################################################################
+variables:
+  projects:
+  - project:
+      name: 'SimplexiDev.Core'
+      type: 'sources'
+      dependsOn: []
+  - project:
+      name: 'SimplexiDev.Build.Annotations'
+      type: 'sources'
+      dependsOn: []
+  - project:
+      name: 'SimplexiDev.Build.NativeCallGenerator'
+      type: 'sources'
+      dependsOn:
+      - 'SimplexiDev.Core'
+      - 'SimplexiDev.Build.Annotations'
+  - project:
+      name: 'SimplexiDev.Native.Libui'
+      type: 'sources'
+      dependsOn:
+      - 'SimplexiDev.Core'
+      - 'SimplexiDev.Build.Annotations'
+      - 'SimplexiDev.Build.NativeCallGenerator'
+  - project:
+      name: 'SimplexiDev.UI'
+      type: 'sources'
+      dependsOn:
+      - 'SimplexiDev.Core'
+      - 'SimplexiDev.Native.Libui'
+  - project:
+      name: 'SimplexiDev.UI.Extras'
+      type: 'sources'
+      dependsOn:
+      - 'SimplexiDev.Core'
+      - 'SimplexiDev.Native.Libui'
+      - 'SimplexiDev.UI'
+  - project:
+      name: 'SimplexiDev.Native.Miniaudio'
+      type: 'sources'
+      dependsOn:
+      - 'SimplexiDev.Core'
+      - 'SimplexiDev.Build.Annotations'
+      - 'SimplexiDev.Build.NativeCallGenerator'
+  - project:
+      name: 'SimplexiDev.Audio'
+      type: 'sources'
+      dependsOn:
+      - 'SimplexiDev.Core'
+      - 'SimplexiDev.Native.Miniaudio'
+  - project:
+      name: 'SimplexiDev.Native.Zstd'
+      type: 'sources'
+      dependsOn:
+      - 'SimplexiDev.Core'
+      - 'SimplexiDev.Build.Annotations'
+      - 'SimplexiDev.Build.NativeCallGenerator'
+  - project:
+      name: 'SimplexiDev.IO.Compression'
+      type: 'sources'
+      dependsOn:
+      - 'SimplexiDev.Core'
+      - 'SimplexiDev.Native.Zstd'
+  configurations:
+  - 'Debug'
+  - 'Release'
+  vmImages:
+  - 'windows-2019'
+  - 'windows-2022'
+  - 'ubuntu-18.04'
+  - 'ubuntu-20.04'
+  - 'macOS-10.15'
+  - 'macOS-11'
 
+# Workflow Definition
+################################################################################
 stages:
-
-# LibUISharp.Core
-- template: ./.azp/stages/libuisharp.yml
+- template: ./stages/build.yml
   parameters:
-    projectId: 'Core'
-    projectName: 'LibUISharp.Core'
-
-# LibUISharp.CodeAnalysis.NativeCallGenerator
-#- template: ./.azp/stages/libuisharp.yml
-#  parameters:
-#    projectId: 'NativeCallGenerator'
-#    projectName: 'LibUISharp.CodeAnalysis.NativeCallGenerator'
-#    dependsOn:
-#    - Build_Core
-
-# LibUISharp.Native.Libui
-- template: ./.azp/stages/libuisharp.yml
+    projects: $(projects)
+    configurations: $(configurations)
+    vmImages: $(vmImages)
+- template: ./stages/publish.yml
   parameters:
-    projectId: 'NativeLibui'
-    projectName: 'LibUISharp.Native.Libui'
-    dependsOn:
-    - Build_Core
-    #- Build_NativeCallGenerator
-    
-# LibUISharp.UI
-- template: ./.azp/stages/libuisharp.yml
-  parameters:
-    projectId: 'UI'
-    projectName: 'LibUISharp.UI'
-    dependsOn:
-    - Build_Core
-    - Build_NativeLibui
-    
-# LibUISharp.UI.Extras
-- template: ./.azp/stages/libuisharp.yml
-  parameters:
-    projectId: 'UIExtras'
-    projectName: 'LibUISharp.UI.Extras'
-    dependsOn:
-    - Build_Core
-    - Build_NativeLibui
-    - Build_UI
-    
-# LibUISharp.Native.Miniaudio
-- template: ./.azp/stages/libuisharp.yml
-  parameters:
-    projectId: 'NativeMiniaudio'
-    projectName: 'LibUISharp.Native.Miniaudio'
-    dependsOn:
-    - Build_Core
-    #- Build_NativeCallGenerator
-    
-# LibUISharp.Audio
-- template: ./.azp/stages/libuisharp.yml
-  parameters:
-    projectId: 'Audio'
-    projectName: 'LibUISharp.Audio'
-    dependsOn:
-    - Build_Core
-    - Build_NativeMiniaudio
-    
-# LibUISharp.Native.Zstd
-- template: ./.azp/stages/libuisharp.yml
-  parameters:
-    projectId: 'NativeZstd'
-    projectName: 'LibUISharp.Native.Zstd'
-    dependsOn:
-    - Build_Core
-    #- Build_NativeCallGenerator
-    
-# LibUISharp.IO.Compression
-- template: ./.azp/stages/libuisharp.yml
-  parameters:
-    projectId: 'IOCompression'
-    projectName: 'LibUISharp.IO.Compression'
-    dependsOn:
-    - Build_Core
-    - Build_NativeZstd
+    projects: $(projects)
