--- a/.ci/steps/build-managed-package.yml
+++ b/.ci/steps/build-managed-package.yml
@@ -17,7 +17,7 @@ parameters:
 steps:
 - task: DotNetCoreCLI@2
   name: 'BuildManagedProject'
-  displayName: 'Build Managed Project (via `dotnet build`)'
+  displayName: 'Build Managed Project'
   continueOnError: false
   inputs:
     command: 'build'
