Started work on the external CI builds

--- a/.azp/build-sdfx.yml
+++ b/.azp/build-sdfx.yml
@@ -4,18 +4,17 @@
 ########################################################################################################################
 
 # Build Number
-################################################################################
+####################################################################################################
 name: $(Date:yyMMdd)$(Rev:rr)
 
 # Commit Triggers
-################################################################################
+####################################################################################################
 trigger:
   batch: false
   branches:
     include:
     - main
-    - release/v*
-    - release/preview/v*
+    - release/*
   paths:
     exclude:
     - "*.md"
@@ -27,7 +26,7 @@ trigger:
     - "*.sln"
 
 # Pull Request Triggers
-################################################################################
+####################################################################################################
 pr:
   autoCancel: true
   branches:
@@ -47,7 +46,7 @@ pr:
     - "*.sln"
     
 # Pipeline Variables
-################################################################################
+####################################################################################################
 variables:
   projects:
   - project:
@@ -122,13 +121,13 @@ variables:
   - 'macOS-11'
 
 # Workflow Definition
-################################################################################
+####################################################################################################
 stages:
-- template: ./stages/build.yml
+- template: ./build-sdfx/stages/build.yml
   parameters:
     projects: $(projects)
     configurations: $(configurations)
     vmImages: $(vmImages)
-- template: ./stages/publish.yml
+- template: ./build-sdfx/stages/publish.yml
   parameters:
     projects: $(projects)
