Updated the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -48,14 +48,4 @@ test-results/
 # Misc. Files
 ##############################
 ## Build Directories
-
-build/!sources/SimplexiDev.Build.Annotations/
-!sources/SimplexiDev.Build.Annotations/src/SimplexiDev/Build/
-!sources/SimplexiDev.Build.NativeCallGenerator/
-!sources/SimplexiDev.Build.NativeCallGenerator/src/SimplexiDev/Build/
-[Bb]in/
-[Oo]bj/
-[Dd]ebug/
-[Rr]elease/
-[Aa]ny[Cc][Pp][Uu]/
-.temp/
+.[Bb]uild/
