--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = external/libui-ng
 	branch = sdfx/main
 	url = https://github.com/simplexidev/libui-ng
+[submodule "external/sdfx-ci"]
+	path = external/sdfx-ci
+	url = https://github.com/simplexidev/sdfx-ci
