--- a/.msbuild/targets/CodeAnalysis.targets
+++ b/.msbuild/targets/CodeAnalysis.targets
@@ -5,10 +5,10 @@
 
 <Project ToolsVersion="16.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-  <PropertyGroup Condition="'$(SDFxProjectType)' != 'examples'">
+  <PropertyGroup Condition="'$(SDFxProjectType)' == 'sources'">
     <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
-  <ItemGroup Condition="'$(SDFxProjectType)' != 'examples'">
+  <ItemGroup Condition="'$(SDFxProjectType)' == 'sources'">
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all" IncludeAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.0.1" PrivateAssets="all" IncludeAssets="all" />
     <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="3.3.2" PrivateAssets="all" IncludeAssets="all" />
